# automata_sfml

./: CMakeLists.txt  README.md
src/: main.cpp
